--- a/P009435.opf/meta.yml
+++ b/P009435.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009435
+id: P009435
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1PD181170
   title: སྔ་འགྱུར་གཡག་ཟེ་དགོན་གྱི་འདོན་ཆ་ལས། སེང་གདོང་མའི་སྐོར།
-  volume: ''
   author: ''
+  volumes: {}
