--- a/P009435.opf/meta.yml
+++ b/P009435.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1PD181170
   title: སྔ་འགྱུར་གཡག་ཟེ་དགོན་གྱི་འདོན་ཆ་ལས། སེང་གདོང་མའི་སྐོར།
   author: ''
-  volumes: {}
+  volumes:
+    97fcc04ba0544ab7ac05a03312798910:
+      image_group_id: I1KG16334
+      title: ''
+      volume_number: 1
+      total_pages: 318
