--- a/P009435.opf/layers/v001/Pagination.yml
+++ b/P009435.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 98a7fd03aa3546f9a593cdb4f3ff9659
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   edb40b4019424070a3b1ec74bfe4ed2c:
