--- a/P009435.opf/meta.yml
+++ b/P009435.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009435
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:38:41.520975
 source_metadata:
   id: bdr:W1PD181170
   title: སྔ་འགྱུར་གཡག་ཟེ་དགོན་གྱི་འདོན་ཆ་ལས། སེང་གདོང་མའི་སྐོར།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 318
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
